--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
+        <main class="dark text-foreground bg-background">
     <div id="root"></div>
+        </main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
